vpc/vpcsubnetpublicprivatenatgateway/infra/template.yml
AWSTemplateFormatVersion: 2010-09-09

Description: Creates a VPC, two private subnets, two public subnets and two NAT gateways

Parameters:
  VPCName:
    Type: String
    Default: VPCDefault

  Owner:
    Type: String
    Default: tg

Mappings:
  SubnetConfig:
    VPC:
      CIDR: 10.0.0.0/16
    Public1:
      CIDR: 10.0.0.0/24
    Public2:
      CIDR: 10.0.1.0/24
    Private1:
      CIDR: 10.0.2.0/24
    Private2:
      CIDR: 10.0.3.0/24

  AZRegions:
    us-east-2:
      AZs: [a, b]

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock:
        Fn::FindInMap: [SubnetConfig, VPC, CIDR]
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: Owner
          Value: !Ref Owner

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          [
            "${AWS::Region}${AZ}",
            AZ: !Select [0, !FindInMap [AZRegions, !Ref AWS::Region, AZs]],
          ]
      CidrBlock:
        Fn::FindInMap: [SubnetConfig, Public1, CIDR]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              [
                "",
                [
                  !Ref VPCName,
                  "-Public-",
                  !Select [0, !FindInMap [AZRegions, !Ref AWS::Region, AZs]],
                ],
              ]
        - Key: Network
          Value: Public
        - Key: Owner
          Value: !Ref Owner

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          [
            "${AWS::Region}${AZ}",
            AZ: !Select [1, !FindInMap [AZRegions, !Ref AWS::Region, AZs]],
          ]
      CidrBlock:
        Fn::FindInMap: [SubnetConfig, Public2, CIDR]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              [
                "",
                [
                  !Ref VPCName,
                  "-Public-",
                  !Select [1, !FindInMap [AZRegions, !Ref AWS::Region, AZs]],
                ],
              ]
        - Key: Network
          Value: Public
        - Key: Owner
          Value: !Ref Owner

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          [
            "${AWS::Region}${AZ}",
            AZ: !Select [0, !FindInMap [AZRegions, !Ref AWS::Region, AZs]],
          ]
      CidrBlock:
        Fn::FindInMap: [SubnetConfig, Private1, CIDR]
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              [
                "",
                [
                  !Ref VPCName,
                  "-Private-",
                  !Select [0, !FindInMap [AZRegions, !Ref AWS::Region, AZs]],
                ],
              ]
        - Key: Network
          Value: Private
        - Key: Owner
          Value: !Ref Owner

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          [
            "${AWS::Region}${AZ}",
            AZ: !Select [1, !FindInMap [AZRegions, !Ref AWS::Region, AZs]],
          ]
      CidrBlock:
        Fn::FindInMap: [SubnetConfig, Private2, CIDR]
      Tags:
        - Key: Name
          Value:
            Fn::Join:
              [
                "",
                [
                  !Ref VPCName,
                  "-Private-",
                  !Select [1, !FindInMap [AZRegions, !Ref AWS::Region, AZs]],
                ],
              ]
        - Key: Network
          Value: Private
        - Key: Owner
          Value: !Ref Owner

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value:
            Fn::Join: ["", [!Ref VPCName, "-IGW"]]
        - Key: Owner
          Value: !Ref Owner

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value:
            Fn::Join: ["", [!Ref VPCName, "-PublicRouteTable"]]
        - Key: Owner
          Value: !Ref Owner

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PublicNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value:
            Fn::Join: ["", [!Ref VPCName, "PublicNetworkAcl"]]
        - Key: Owner
          Value: !Ref Owner

  InboundHTTPPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 0
        To: 65535

  OutboundHTTPPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 0
        To: 65535

  PublicSubnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      NetworkAclId: !Ref PublicNetworkAcl

  PublicSubnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      NetworkAclId: !Ref PublicNetworkAcl

  ElasticIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  ElasticIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt: [ElasticIP1, AllocationId]
      SubnetId: !Ref PublicSubnet1

  NATGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt: [ElasticIP2, AllocationId]
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value:
            Fn::Join: ["", [!Ref VPCName, "PrivateRouteTable1"]]
        - Key: Owner
          Value: !Ref Owner

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value:
            Fn::Join: ["", [!Ref VPCName, "PrivateRouteTable2"]]
        - Key: Owner
          Value: !Ref Owner

  PrivateRoute1:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway1

  PrivateRoute2:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway2

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

Outputs:
  VPCId:
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-VPC"

  PublicSubnet1:
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-PublicSubnet1"

  PublicSubnet2:
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-PublicSubnet2"

  PrivateSubnet1:
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-PrivateSubnet1"

  PrivateSubnet2:
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-PrivateSubnet2"

  VPCDefaultSecurityGroup:
    Value: !GetAtt VPC.DefaultSecurityGroup
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-VPCDefaultSecurityGroup"
